WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
293034
css/css-view-transitions/pseudo-element-animations fails to remove animations when the document element gets display:none
https://bugs.webkit.org/show_bug.cgi?id=293034
Summary
css/css-view-transitions/pseudo-element-animations fails to remove animations...
Matt Woodrow
Reported
2025-05-14 20:43:09 PDT
Setting display:none on the document element should remove the VT tree (and all associated animations), but does not.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-05-14 20:43:19 PDT
<
rdar://problem/151353389
>
Matt Woodrow
Comment 2
2025-05-14 20:50:00 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/45416
EWS
Comment 3
2025-05-20 12:14:14 PDT
Committed
295170@main
(ca5554a142fd): <
https://commits.webkit.org/295170@main
> Reviewed commits have been landed. Closing PR #45416 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug