css/css-view-transitions/pseudo-element-animations fails to remove animations when the document element gets display:none. https://bugs.webkit.org/show_bug.cgi?id=293034 <rdar://151353389>

Reviewed by Tim Nguyen.

Setting display:none on the document element should remove the VT tree (and all associated animations), but does not because the VT renderer tree is a sibling of the document element's renderer.

Make sure RenderTreeUpdater explicitly clears the VT tree if the document element renderer gets removed, and make sure we remove animations (on removed renderers, and their descendants).

* LayoutTests/imported/w3c/web-platform-tests/css/css-view-transitions/pseudo-element-animations-expected.txt:
* Source/WebCore/dom/ViewTransition.cpp:
(WebCore::ViewTransition::clearViewTransition):
* Source/WebCore/rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::updateRenderTree):
(WebCore::RenderTreeUpdater::updateAfterDescendants):
(WebCore::RenderTreeUpdater::destroyAndCancelAnimationsForSubtree):
* Source/WebCore/rendering/updating/RenderTreeUpdater.h:
* Source/WebCore/rendering/updating/RenderTreeUpdaterViewTransition.cpp:
(WebCore::RenderTreeUpdater::ViewTransition::updatePseudoElementTree):
(WebCore::RenderTreeUpdater::ViewTransition::updatePseudoElementGroup):
* Source/WebCore/rendering/updating/RenderTreeUpdaterViewTransition.h:

Canonical link: https://commits.webkit.org/295170@main