Source/WebCore/rendering/updating/RenderTreeUpdaterViewTransition.cpp
@@ -49,14 +49,19 @@ RenderTreeUpdater::ViewTransition::ViewTransition(RenderTreeUpdater& updater)
 
 // The contents and ordering of the named elements map should remain stable during the duration of the transition.
 // We should only need to handle changes in the `display` CSS property by recreating / deleting renderers as needed.
-void RenderTreeUpdater::ViewTransition::updatePseudoElementTree(RenderElement& documentElementRenderer, StyleDifference minimalStyleDifference)
+void RenderTreeUpdater::ViewTransition::updatePseudoElementTree(RenderElement* documentElementRenderer, StyleDifference minimalStyleDifference)
 {
-    auto destroyPseudoElementTreeIfNeeded = [&documentElementRenderer, this]() {
-        if (WeakPtr viewTransitionContainingBlock = documentElementRenderer.view().viewTransitionContainingBlock())
-            m_updater.m_builder.destroy(*viewTransitionContainingBlock);
+    auto destroyPseudoElementTreeIfNeeded = [&]() {
+        if (WeakPtr viewTransitionContainingBlock = m_updater.renderView().viewTransitionContainingBlock())
+            m_updater.destroyAndCancelAnimationsForSubtree(*viewTransitionContainingBlock);
     };
 
-    Ref document = documentElementRenderer.document();
+    if (!documentElementRenderer) {
+        destroyPseudoElementTreeIfNeeded();
+        return;
+    }
+
+    Ref document = documentElementRenderer->document();
 
     // Intentionally bail out early here to avoid computing the style.
     if (!document->hasViewTransitionPseudoElementTree() || !document->documentElement()) {
@@ -65,7 +70,7 @@ void RenderTreeUpdater::ViewTransition::updatePseudoElementTree(RenderElement& d
     }
 
     // Destroy pseudo element tree ::view-transition has display: none or no style.
-    auto rootStyle = documentElementRenderer.getCachedPseudoStyle({ PseudoId::ViewTransition }, &documentElementRenderer.style());
+    auto rootStyle = documentElementRenderer->getCachedPseudoStyle({ PseudoId::ViewTransition }, &documentElementRenderer->style());
     if (!rootStyle || rootStyle->display() == DisplayType::None) {
         destroyPseudoElementTreeIfNeeded();
         return;
@@ -76,9 +81,9 @@ void RenderTreeUpdater::ViewTransition::updatePseudoElementTree(RenderElement& d
 
     auto newRootStyle = RenderStyle::clone(*rootStyle);
 
-    WeakPtr viewTransitionContainingBlock = documentElementRenderer.view().viewTransitionContainingBlock();
+    WeakPtr viewTransitionContainingBlock = documentElementRenderer->view().viewTransitionContainingBlock();
     if (!viewTransitionContainingBlock) {
-        auto containingBlockStyle = RenderStyle::createAnonymousStyleWithDisplay(documentElementRenderer.view().style(), DisplayType::Block);
+        auto containingBlockStyle = RenderStyle::createAnonymousStyleWithDisplay(documentElementRenderer->view().style(), DisplayType::Block);
         containingBlockStyle.setPosition(PositionType::Fixed);
         containingBlockStyle.setPointerEvents(PointerEvents::None);
 
@@ -90,9 +95,9 @@ void RenderTreeUpdater::ViewTransition::updatePseudoElementTree(RenderElement& d
 
         auto newViewTransitionContainingBlock = WebCore::createRenderer<RenderBlockFlow>(RenderObject::Type::BlockFlow, document, WTFMove(containingBlockStyle), RenderObject::BlockFlowFlag::IsViewTransitionContainingBlock);
         newViewTransitionContainingBlock->initializeStyle();
-        documentElementRenderer.view().setViewTransitionContainingBlock(*newViewTransitionContainingBlock.get());
+        documentElementRenderer->view().setViewTransitionContainingBlock(*newViewTransitionContainingBlock.get());
         viewTransitionContainingBlock = newViewTransitionContainingBlock.get();
-        m_updater.m_builder.attach(*documentElementRenderer.parent(), WTFMove(newViewTransitionContainingBlock));
+        m_updater.m_builder.attach(*documentElementRenderer->parent(), WTFMove(newViewTransitionContainingBlock));
     }
 
     // Create ::view-transition as needed.
@@ -111,25 +116,25 @@ void RenderTreeUpdater::ViewTransition::updatePseudoElementTree(RenderElement& d
         return;
 
     // Traverse named elements map to update/build all ::view-transition-group().
-    Vector<SingleThreadWeakPtr<RenderObject>> descendantsToDelete;
+    Vector<SingleThreadWeakPtr<RenderElement>> descendantsToDelete;
     auto* currentGroup = viewTransitionRoot->firstChildBox();
     for (auto& name : activeViewTransition->namedElements().keys()) {
         ASSERT(!currentGroup || currentGroup->style().pseudoElementType() == PseudoId::ViewTransitionGroup);
         if (currentGroup && name == currentGroup->style().pseudoElementNameArgument()) {
-            auto style = documentElementRenderer.getCachedPseudoStyle({ PseudoId::ViewTransitionGroup, name }, &documentElementRenderer.style());
+            auto style = documentElementRenderer->getCachedPseudoStyle({ PseudoId::ViewTransitionGroup, name }, &documentElementRenderer->style());
             if (!style || style->display() == DisplayType::None) {
-                documentElementRenderer.view().removeViewTransitionGroup(name);
+                documentElementRenderer->view().removeViewTransitionGroup(name);
                 descendantsToDelete.append(currentGroup);
             } else
-                updatePseudoElementGroup(*style, *currentGroup, documentElementRenderer, minimalStyleDifference);
+                updatePseudoElementGroup(*style, *currentGroup, *documentElementRenderer, minimalStyleDifference);
             currentGroup = currentGroup->nextSiblingBox();
         } else
-            buildPseudoElementGroup(*viewTransitionRoot, name, documentElementRenderer, currentGroup);
+            buildPseudoElementGroup(*viewTransitionRoot, name, *documentElementRenderer, currentGroup);
     }
 
     for (auto& descendant : descendantsToDelete) {
         if (descendant)
-            m_updater.m_builder.destroy(*descendant);
+            m_updater.destroyAndCancelAnimationsForSubtree(*descendant);
     }
 }
 
@@ -210,7 +215,7 @@ void RenderTreeUpdater::ViewTransition::updatePseudoElementGroup(const RenderSty
         ASSERT(imagePair->style().pseudoElementType() == PseudoId::ViewTransitionImagePair);
         auto shouldDeleteRenderer = updateRenderer(*imagePair);
         if (shouldDeleteRenderer == ShouldDeleteRenderer::Yes) {
-            m_updater.m_builder.destroy(*imagePair);
+            m_updater.destroyAndCancelAnimationsForSubtree(*imagePair);
             return;
         }
     } else if (auto newImagePair = createRendererIfNeeded(documentElementRenderer, name, PseudoId::ViewTransitionImagePair)) {
@@ -255,12 +260,12 @@ void RenderTreeUpdater::ViewTransition::updatePseudoElementGroup(const RenderSty
         shouldDeleteViewTransitionNew = updateRenderer(*viewTransitionNew);
 
     if (shouldDeleteViewTransitionNew == ShouldDeleteRenderer::Yes)
-        m_updater.m_builder.destroy(*viewTransitionNew);
+        m_updater.destroyAndCancelAnimationsForSubtree(*viewTransitionNew);
     else if (newViewTransitionNew)
         m_updater.m_builder.attach(*imagePair, WTFMove(newViewTransitionNew));
 
     if (shouldDeleteViewTransitionOld == ShouldDeleteRenderer::Yes)
-        m_updater.m_builder.destroy(*viewTransitionOld);
+        m_updater.destroyAndCancelAnimationsForSubtree(*viewTransitionOld);
     else if (newViewTransitionOld)
         m_updater.m_builder.attach(*imagePair, WTFMove(newViewTransitionOld), viewTransitionNew.get());
 }
