Source/WebCore/rendering/updating/RenderTreeUpdaterViewTransition.h
@@ -39,7 +39,7 @@ class RenderTreeUpdater::ViewTransition {
 public:
     ViewTransition(RenderTreeUpdater&);
 
-    void updatePseudoElementTree(RenderElement&, StyleDifference minimalStyleDifference);
+    void updatePseudoElementTree(RenderElement*, StyleDifference minimalStyleDifference);
 private:
     void buildPseudoElementGroup(RenderBlockFlow& viewTransitionRoot, const AtomString&, RenderElement&, RenderObject* = nullptr);
     void updatePseudoElementGroup(const RenderStyle&, RenderBox&, RenderElement&, StyleDifference minimalStyleDifference);
